BugFix & Small Changes. StartJunction is always the one on top or left